<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/button_bianco"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumbTint="@color/giallochiaro"
        android:trackTint="@color/gialloScuro"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/bahiama"
        android:text="@string/notifichenuovocoupoj"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView77"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bahiama"
        android:text="@string/notifiche"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bahiama"
        android:text="@string/segnala"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch3" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/bahiama"
        android:thumbTint="@color/giallochiaro"
        android:trackTint="@color/gialloScuro"
        android:text="@string/notifichenuovpost"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView77"
        app:layout_constraintTop_toBottomOf="@+id/textView77" />
</androidx.constraintlayout.widget.ConstraintLayout>